Ultimos cambios HTML

--- a/views/home.html
+++ b/views/home.html
@@ -48,13 +48,33 @@
           <p>  10% off   </p>
           <p>Samsung Galaxy S10 </p>
            
-        <img src="img/img-tv.samsung-smart.jpg" alt="ola" width="100" height="100"/><p>     
+        <img src="img/img-tv-samsung-smart.jpg" alt="ola" width="100" height="100"/><p>     
         <p>23.200 puntos</p>
         <p> 5% off </p>
         <p> SmartTv Samsung 43" </p>
       </section>
       <section>
         <p>Sección de ofertas</p>
+        <img src="img/img-cafetera-moulinex.jpg" alt="ola" width="100" height="100"/>
+        
+        <p> 6.770 puntos</p>
+        <p> 40% OFF </p> 
+        <p>  Cafetera Moulinex </p>
+        <p></p>
+        <img src="img/img-macbook-pro-2019.jpg" alt="ola" width="100" height="100"/><p>
+         <p> 230.000 puntos </p>
+         <p> 20% off </p>
+         <p> MacBook Pro 2019 </p>
+         
+        <img src="img/img-samsung-galaxy-s10.jpg" alt="ola" width="100" height="100"/><p>  
+          <p>70.500 puntos </p>
+          <p>  10% off   </p>
+          <p>Samsung Galaxy S10 </p>
+           
+        <img src="img/img-tv-samsung-smart.jpg" alt="ola" width="100" height="100"/><p>     
+        <p>23.200 puntos</p>
+        <p> 5% off </p>
+        <p> SmartTv Samsung 43" </p>
         <p></p>
         <p></p>
         <p></p>
@@ -69,10 +89,10 @@
           Con nuestra tienda, tienes cuotas sin interés con tarjeta o efectivo
           en puntos de pago. ¡Y siempre es seguro!
         </p> </section>
-      ><br />
+      <br />
       <sction> 
         <p>Envío gratis desde 2.500 puntos</p>
-        <p>Solo por estar registrad@ en nuestra tienda tienes envíos gratis en miles de productos<./p>
+        <p>Solo por estar registrad@ en nuestra tienda tienes envíos gratis en miles de productos</p>
       </section><br />
       <section>
         <p>Seguridad, de principio a fin</p> 
