--- a/views/home.html
+++ b/views/home.html
@@ -1,103 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tienda</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
-      <img src="img/logo-mercado-liebre.svg" alt="ola" />
-      <br />
-      <input type="search" value="buscar" />
-      <br />
-      <a href="#">Comprá en cuotas y sin tarjeta de crédito</a>
-      <br />
-      <nav>
-        <ul>
-          <li><a href="#"> Ofertas</a></li>
-          <li><a href="#">Tiendas Oficiales</a></li>
-          <li><a href="#">Vender</a></li>
-          <li><a href="#">Ayuda</a></li>
-        </ul>
-        <ul>
-          <li><a href="#">Creá tu cuenta</a></li>
-          <li><a href="#">Ingresá</a></li>
-          <li><a href="#">Mis compras</a></li>
-        </ul>
-      </nav>
+        <img src="/public/img/logo-mercado-liebre.svg" alt="ola" /><br /><br />
+        <input type="search" value="buscar" /> <br /><br />
+        <a href="#">Comprá en cuotas y sin tarjeta de crédito</a><br /><br />
+
+        <nav>
+            <ul>
+                <li><a href="#"> Ofertas</a></li>
+                <li><a href="#">Tiendas Oficiales</a></li>
+                <li><a href="#">Vender</a></li>
+                <li><a href="#">Ayuda</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">Creá tu cuenta</a></li>
+                <li><a href="#">Ingresá</a></li>
+                <li><a href="#">Mis compras</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-      <section>
-        <p>Basado en tu ultima visita</p>
-        <img src="img/img-cafetera-moulinex.jpg" alt="ola" width="100" height="100"/>
-        
-        <p> 6.770 puntos</p>
-        <p> 40% OFF </p> 
-        <p>  Cafetera Moulinex </p>
-        <p></p>
-        <img src="img/img-macbook-pro-2019.jpg" alt="ola" width="100" height="100"/><p>
-         <p> 230.000 puntos </p>
-         <p> 20% off </p>
-         <p> MacBook Pro 2019 </p>
-         
-        <img src="img/img-samsung-galaxy-s10.jpg" alt="ola" width="100" height="100"/><p>  
-          <p>70.500 puntos </p>
-          <p>  10% off   </p>
-          <p>Samsung Galaxy S10 </p>
-           
-        <img src="img/img-tv-samsung-smart.jpg" alt="ola" width="100" height="100"/><p>     
-        <p>23.200 puntos</p>
-        <p> 5% off </p>
-        <p> SmartTv Samsung 43" </p>
-      </section>
-      <section>
-        <p>Sección de ofertas</p>
-        <img src="img/img-cafetera-moulinex.jpg" alt="ola" width="100" height="100"/>
-        
-        <p> 6.770 puntos</p>
-        <p> 40% OFF </p> 
-        <p>  Cafetera Moulinex </p>
-        <p></p>
-        <img src="img/img-macbook-pro-2019.jpg" alt="ola" width="100" height="100"/><p>
-         <p> 230.000 puntos </p>
-         <p> 20% off </p>
-         <p> MacBook Pro 2019 </p>
-         
-        <img src="img/img-samsung-galaxy-s10.jpg" alt="ola" width="100" height="100"/><p>  
-          <p>70.500 puntos </p>
-          <p>  10% off   </p>
-          <p>Samsung Galaxy S10 </p>
-           
-        <img src="img/img-tv-samsung-smart.jpg" alt="ola" width="100" height="100"/><p>     
-        <p>23.200 puntos</p>
-        <p> 5% off </p>
-        <p> SmartTv Samsung 43" </p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-      </section>
-    </main>
+        <section>
+            <p>Basado en tu ultima visita</p>
+            <img src="img/img-cafetera-moulinex.jpg" alt="ola" width="100" height="100" />
+            <p>6.770 puntos</p>
+            <p>40% OFF</p>
+            <p>Cafetera Moulinex</p>
 
+            <img src="img/img-macbook-pro-2019.jpg" alt="ola" width="100" height="100" />
+            <p>230.000 puntos</p>
+            <p>20% off</p>
+            <p>MacBook Pro 2019</p>
+
+            <img src="img/img-samsung-galaxy-s10.jpg" alt="ola" width="100" height="100" />
+            <p>70.500 puntos</p>
+            <p>10% off</p>
+            <p>Samsung Galaxy S10</p>
+
+            <img src="img/img-tv-samsung-smart.jpg" alt="ola" width="100" height="100" />
+            <p>23.200 puntos</p>
+            <p>5% off</p>
+            <p>SmartTv Samsung 43"</p>
+        </section>
+        <br />
+
+        <section>
+            <p>Sección de ofertas</p>
+            <img src="img/img-cafetera-moulinex.jpg" alt="ola" width="100" height="100" />
+            <p>6.770 puntos</p>
+            <p>40% OFF</p>
+            <p>Cafetera Moulinex</p>
+
+            <img src="img/img-macbook-pro-2019.jpg" alt="ola" width="100" height="100" />
+            <p>230.000 puntos</p>
+            <p>20% off</p>
+            <p>MacBook Pro 2019</p>
+
+            <img src="img/img-samsung-galaxy-s10.jpg" alt="ola" width="100" height="100" />
+            <p>70.500 puntos</p>
+            <p>10% off</p>
+            <p>Samsung Galaxy S10</p>
+
+            <img src="img/img-tv-samsung-smart.jpg" alt="ola" width="100" height="100" />
+            <p>23.200 puntos</p>
+            <p>5% off</p>
+            <p>SmartTv Samsung 43"</p>
+        </section>
+    </main>
+    <br />
     <footer>
-      <section>
-        <p>Pagá con tarjeta o en efectivo</p>
-        <p>
-          Con nuestra tienda, tienes cuotas sin interés con tarjeta o efectivo
-          en puntos de pago. ¡Y siempre es seguro!
-        </p> </section>
-      <br />
-      <sction> 
-        <p>Envío gratis desde 2.500 puntos</p>
-        <p>Solo por estar registrad@ en nuestra tienda tienes envíos gratis en miles de productos</p>
-      </section><br />
-      <section>
-        <p>Seguridad, de principio a fin</p> 
-        <p>¿No te gusta? ¡Devuélvelo! En nuestra tienda no hay nada que no puedas hacer, porque estás siempre protegid@</p> 
-      </section><br />
+        <section>
+            <p>Pagá con tarjeta o en efectivo</p>
+            <p>
+                Con nuestra tienda, tienes cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!
+            </p>
+        </section>
+        <section>
+            <p>Envío gratis desde 2.500 puntos</p>
+            <p>
+                Solo por estar registrad@ en nuestra tienda tienes envíos gratis en miles de productos
+            </p>
+        </section>
+        <section>
+            <p>Seguridad, de principio a fin</p>
+            <p>
+                ¿No te gusta? ¡Devuélvelo! En nuestra tienda no hay nada que no puedas hacer, porque estás siempre protegid@
+            </p>
+        </section>
     </footer>
-  </body>
+</body>
+
 </html>
