--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,10 @@
 body {
   font-family: "Roboto", sans-serif;
+  color: #03264c;
 }
-
+header {
+  background-color: #ebebeb;
+}
 .cuerpos {
   font-size: 12px;
 }
@@ -20,4 +23,7 @@ body {
 
 .descripciones {
   font-size: 16px;
+}
+.yellow {
+  background-color: #eac926;
 }
