--- a/views/home.html
+++ b/views/home.html
@@ -16,7 +16,12 @@
 
   <body>
     <header>
-      <img src="/img/logo-mercado-liebre.svg" alt="ola" /><br /><br />
+      <img
+        src="/img/logo-mercado-liebre.svg"
+        alt="ola"
+        width="150px"
+        height="100px"
+      />
       <input type="search" value="buscar" /> <br /><br />
       <a href="#">Comprá en cuotas y sin tarjeta de crédito</a><br /><br />
 
@@ -34,118 +39,119 @@
         </ul>
       </nav>
     </header>
+    <section class="yellow">
+      <main>
+        <section>
+          <p class="titulares">Basado en tu ultima visita</p>
+          <img
+            src="img/img-cafetera-moulinex.jpg"
+            alt="ola"
+            width="100"
+            height="100"
+          />
+          <p class="precios">6.770 puntos</p>
+          <p class="descuento">40% OFF</p>
+          <p class="descripciones">Cafetera Moulinex</p>
 
-    <main>
-      <section>
-        <p class="titulares">Basado en tu ultima visita</p>
-        <img
-          src="img/img-cafetera-moulinex.jpg"
-          alt="ola"
-          width="100"
-          height="100"
-        />
-        <p class="precios">6.770 puntos</p>
-        <p class="descuento">40% OFF</p>
-        <p class="descripciones">Cafetera Moulinex</p>
+          <img
+            src="img/img-macbook-pro-2019.jpg"
+            alt="ola"
+            width="100"
+            height="100"
+          />
+          <p class="precios">230.000 puntos</p>
+          <p class="descuento">20% off</p>
+          <p class="descripciones">MacBook Pro 2019</p>
 
-        <img
-          src="img/img-macbook-pro-2019.jpg"
-          alt="ola"
-          width="100"
-          height="100"
-        />
-        <p class="precios">230.000 puntos</p>
-        <p class="descuento">20% off</p>
-        <p class="descripciones">MacBook Pro 2019</p>
+          <img
+            src="img/img-samsung-galaxy-s10.jpg"
+            alt="ola"
+            width="100"
+            height="100"
+          />
+          <p class="precios">70.500 puntos</p>
+          <p class="descuento">10% off</p>
+          <p class="descripciones">Samsung Galaxy S10</p>
 
-        <img
-          src="img/img-samsung-galaxy-s10.jpg"
-          alt="ola"
-          width="100"
-          height="100"
-        />
-        <p class="precios">70.500 puntos</p>
-        <p class="descuento">10% off</p>
-        <p class="descripciones">Samsung Galaxy S10</p>
+          <img
+            src="img/img-tv-samsung-smart.jpg"
+            alt="ola"
+            width="100"
+            height="100"
+          />
+          <p class="precios">23.200 puntos</p>
+          <p class="descuento">5% off</p>
+          <p class="descripciones">SmartTv Samsung 43"</p>
+        </section>
+        <br />
 
-        <img
-          src="img/img-tv-samsung-smart.jpg"
-          alt="ola"
-          width="100"
-          height="100"
-        />
-        <p class="precios">23.200 puntos</p>
-        <p class="descuento">5% off</p>
-        <p class="descripciones">SmartTv Samsung 43"</p>
-      </section>
+        <section>
+          <p class="titulares">Sección de ofertas</p>
+          <img
+            src="img/img-cafetera-moulinex.jpg"
+            alt="ola"
+            width="100"
+            height="100"
+          />
+          <p class="precios">6.770 puntos</p>
+          <p class="descuento">40% OFF</p>
+          <p class="descripciones">Cafetera Moulinex</p>
+
+          <img
+            src="img/img-macbook-pro-2019.jpg"
+            alt="ola"
+            width="100"
+            height="100"
+          />
+          <p class="precios">230.000 puntos</p>
+          <p class="descuento">20% off</p>
+          <p class="descripciones">MacBook Pro 2019</p>
+
+          <img
+            src="img/img-samsung-galaxy-s10.jpg"
+            alt="ola"
+            width="100"
+            height="100"
+          />
+          <p class="precios">70.500 puntos</p>
+          <p class="descuento">10% off</p>
+          <p class="descripciones">Samsung Galaxy S10</p>
+
+          <img
+            src="img/img-tv-samsung-smart.jpg"
+            alt="ola"
+            width="100"
+            height="100"
+          />
+          <p class="precios">23.200 puntos</p>
+          <p class="descuento">5% off</p>
+          <p class="descripciones">SmartTv Samsung 43"</p>
+        </section>
+      </main>
       <br />
-
-      <section>
-        <p class="titulares">Sección de ofertas</p>
-        <img
-          src="img/img-cafetera-moulinex.jpg"
-          alt="ola"
-          width="100"
-          height="100"
-        />
-        <p class="precios">6.770 puntos</p>
-        <p class="descuento">40% OFF</p>
-        <p class="descripciones">Cafetera Moulinex</p>
-
-        <img
-          src="img/img-macbook-pro-2019.jpg"
-          alt="ola"
-          width="100"
-          height="100"
-        />
-        <p class="precios">230.000 puntos</p>
-        <p class="descuento">20% off</p>
-        <p class="descripciones">MacBook Pro 2019</p>
-
-        <img
-          src="img/img-samsung-galaxy-s10.jpg"
-          alt="ola"
-          width="100"
-          height="100"
-        />
-        <p class="precios">70.500 puntos</p>
-        <p class="descuento">10% off</p>
-        <p class="descripciones">Samsung Galaxy S10</p>
-
-        <img
-          src="img/img-tv-samsung-smart.jpg"
-          alt="ola"
-          width="100"
-          height="100"
-        />
-        <p class="precios">23.200 puntos</p>
-        <p class="descuento">5% off</p>
-        <p class="descripciones">SmartTv Samsung 43"</p>
-      </section>
-    </main>
-    <br />
-    <footer>
-      <section>
-        <p class="cuerpos">Pagá con tarjeta o en efectivo</p>
-        <p class="cuerpos">
-          Con nuestra tienda, tienes cuotas sin interés con tarjeta o efectivo
-          en puntos de pago. ¡Y siempre es seguro!
-        </p>
-      </section>
-      <section>
-        <p class="cuerpos">Envío gratis desde 2.500 puntos</p>
-        <p class="cuerpos">
-          Solo por estar registrad@ en nuestra tienda tienes envíos gratis en
-          miles de productos
-        </p>
-      </section>
-      <section>
-        <p class="cuerpos">Seguridad, de principio a fin</p>
-        <p class="cuerpos">
-          ¿No te gusta? ¡Devuélvelo! En nuestra tienda no hay nada que no puedas
-          hacer, porque estás siempre protegid@
-        </p>
-      </section>
-    </footer>
+      <footer>
+        <section>
+          <p class="cuerpos">Pagá con tarjeta o en efectivo</p>
+          <p class="cuerpos">
+            Con nuestra tienda, tienes cuotas sin interés con tarjeta o efectivo
+            en puntos de pago. ¡Y siempre es seguro!
+          </p>
+        </section>
+        <section>
+          <p class="cuerpos">Envío gratis desde 2.500 puntos</p>
+          <p class="cuerpos">
+            Solo por estar registrad@ en nuestra tienda tienes envíos gratis en
+            miles de productos
+          </p>
+        </section>
+        <section>
+          <p class="cuerpos">Seguridad, de principio a fin</p>
+          <p class="cuerpos">
+            ¿No te gusta? ¡Devuélvelo! En nuestra tienda no hay nada que no
+            puedas hacer, porque estás siempre protegid@
+          </p>
+        </section>
+      </footer>
+    </section>
   </body>
 </html>
