--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,23 +1,27 @@
 body {
-  font-family: "Roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 
 .cuerpos {
-  font-size: 12px;
+    font-size: 12px;
 }
 
 .titulares {
-  font-size: 24px;
+    font-size: 24px;
 }
 
 .precios {
-  font-size: 18px;
+    font-size: 18px;
 }
 
 .descuento {
-  font-size: 16px;
+    font-size: 16px;
 }
 
 .descripciones {
-  font-size: 16px;
+    font-size: 16px;
+}
+
+.azul {
+    color: #03264c;
 }
