--- a/views/home.html
+++ b/views/home.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <img src="/img/logo-mercado-liebre.svg" alt="ola" width="150px" height="100px" />
-        <input type="search" value="buscar" /> <br /><br />
+        <input type="search" value="" placeholder="Buscar" /> <br /><br />
         <a href="#">Comprá en cuotas y sin tarjeta de crédito</a><br /><br />
 
         <nav>
@@ -25,6 +25,9 @@
                 <li><a href="#">Vender</a></li>
                 <li><a href="#">Ayuda</a></li>
             </ul>
+        </nav>
+
+        <nav>
             <ul>
                 <li><a href="#">Creá tu cuenta</a></li>
                 <li><a href="#">Ingresá</a></li>
@@ -32,6 +35,7 @@
             </ul>
         </nav>
     </header>
+
     <section class="yellow">
         <main>
             <section>
@@ -82,7 +86,7 @@
             </section>
         </main>
         <br />
-        <footer>
+        <footer class="centrado">
             <section>
                 <p class="cuerpos">Pagá con tarjeta o en efectivo</p>
                 <p class="cuerpos">
