--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -43,3 +43,68 @@ header {
     width: 2em;
     margin-inline: 10px;
 }
+
+.buscador {
+    padding-top: 10px;
+    margin-top: 10px;
+    display: inline;
+    align-items: stretch;
+}
+
+.respmenu a {
+    color: inherit;
+    text-decoration: none;
+    display: block;
+    padding: 10px 20px;
+    border-bottom: 2px solid #456789;
+    max-width: 200px;
+    background: #1259c3;
+    font-variant: small-caps;
+    text-shadow: 1px 1px black;
+}
+
+.respmenu input[type="checkbox"],
+.respmenu .fa-bars,
+.respmenu .fa-times {
+    position: absolute;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    right: 0;
+    top: 0;
+    width: 48px;
+    height: 48px;
+}
+
+.respmenu .fa-bars,
+.respmenu .fa-times {
+    font-size: 48px;
+    pointer-events: none;
+}
+
+.respmenu input[type="checkbox"] {
+    opacity: 0;
+}
+
+.respmenu {
+    color: white;
+    position: relative;
+    background: #eac926;
+    min-height: 48px;
+}
+
+.respmenu nav {
+    display: none;
+}
+
+.respmenu input:checked~nav {
+    display: block;
+}
+
+.respmenu input:checked~.fa-bars {
+    display: none;
+}
+
+.respmenu input:not(:checked)~.fa-times {
+    display: none;
+}
